# CMP6200

./: .gitignore  Lewis Higgins - 22133848 Student Project Declaration.docx  readme.md
Artifact/: ! Future Work.txt  ! In-dev notes.txt  ! Streamlit Frontend.py  ! W3Prototype.ipynb  ! Week 6 Artefact.ipynb  Chatbot.py  Chroma.py  Evaluator.py  FAISS-PyPDF.py  FAISS.py  Pricing notes.txt  Prototype notes.txt  Prototype.ipynb  Streamlit Frontend.py  VectorStore.py  Week3Prototype-CHROMA.ipynb  Week3Prototype-FAISS.ipynb  Week3Prototype.ipynb  pyproject.toml  requirements.txt
Artifact/! Week 3 Prototype/: FAISS-PyPDF.py
Artifact/! Week 3 Prototype/FAISS/: index.pkl
Artifact/! Week 3 Prototype/FAISS-PyPDF/: index.faiss
Artifact/Chroma/: chroma.sqlite3
Artifact/Data/: AdditionalInfo.tex
Artifact/FAISS/: index.faiss  index.pkl
Artifact/FAISS-PyPDF/: index.pkl
Artifact/VectorStores/FAISS/: index.pkl
Artifact/VectorStores/FAISS-BigChunks/: index.faiss  index.pkl
Artifact/VectorStores/FAISS-Gemini [unused]/: index.faiss  index.pkl
Artifact/VectorStores/FAISS-HugeChunks/: index.faiss  index.pkl
Artifact/VectorStores/FAISS-SmallChunks/: index.pkl
Artifact/VectorStores/FAISS-Unstructured/: index.faiss  index.pkl
LaTeX/Dissertation/: Dissertation.bib  Dissertation.tex  LitReview.bib  Proposal.bib
LaTeX/Final Dissertation due 28 April/: .latexmkrc  Dissertation.tex
LaTeX/Literature Review due 25 Nov/: LitReview.tex  litReview.bib
LaTeX/Proposal due 14 Oct/: Proposal.tex  proposal.bib
Module notes/: Week 4.txt  Week 5.txt  Week 6 - A.txt  Week 6.txt  Week 8 - B.txt
Module notes/Semester 1/: Week 1.txt  Week 2.txt  Week 6 - B.txt  Week 7.txt  Week 8 - A.txt
Module notes/Semester 2/: Week 1.txt  Week 2.txt  Week 4.txt  (+6 more)
(+23 files in other folders)
