[project]
name = "artifact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "chromadb>=0.6.3",
    "faiss-cpu>=1.10.0",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-openai>=0.3.3",
    "onnx==1.16.1",
    "openai>=1.61.1",
    "pdfminer-six>=20240706",
    "pi-heif>=0.21.0",
    "pypdf>=5.2.0",
    "unstructured[local-inference]>=0.16.20",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
