[project]
name = "artifact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "deepeval>=2.6.4",
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-openai>=0.3.3",
    "langgraph>=0.2.70",
    "langsmith>=0.3.6",
    "openai>=1.61.1",
    "pdfminer-six>=20240706",
    "pypdf>=5.2.0",
    "streamlit>=1.42.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
